# Microsoft-Fabric-workload-development-sample

./: SUPPORT.md
Backend/python/: .gitignore  Dockerfile  README.md  deployment.md  docker-compose.yaml  openapi.yaml  pytest.ini  requirements.txt  run_tests.py  setup.cfg
Backend/python/src/: appsettings.Development.json  appsettings.json  main.py
Backend/python/src/constants/: api_constants.py  environment_constants.py  error_codes.py  http_constants.py  item1_field_names.py  job_types.py  onelake_constants.py  workload_constants.py  workload_scopes.py
Backend/python/src/core/: dependencies.py  service_initializer.py  service_registry.py
Backend/python/src/exceptions/: base_exception.py  exceptions.py
Backend/python/src/fabric_api/: security_api.py
Backend/python/src/impl/: fabric_extension_controller.py  lakehouse_controller.py  onelake_controller.py
Backend/python/src/items/: base_item.py  item1.py
Backend/python/src/middleware/: exception_handlers.py
Backend/python/src/models/: authentication_models.py  common_item_metadata.py  fabric_item.py  item1_metadata.py  item_metadata.py  item_reference.py  job_metadata.py  lakehouse_file.py  lakehouse_table.py  onelake_folder.py  write_to_lakehouse_file_request.py
Backend/python/src/services/: authentication.py  authorization.py  configuration_service.py  http_client.py  item_factory.py  item_metadata_store.py  (+3 more)
Backend/python/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_fixtures.py  test_helpers.py
Backend/python/tools/: ManifestGeneratorTool.md  manifest_package_generator.py
(+73 files in other folders)
