[metadata]
name = fabric_api
version = v1
description = APIs to be implemented by workloads for integration with Microsoft Fabric
long_description = file: README.md
keywords = OpenAPI Workload REST APIs
python_requires = >= 3.11
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src